# Generated by Django 5.2.7 on 2025-10-18 08:34

import uuid

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Resource',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('resource_type', models.CharField(db_index=True, max_length=50)),
                ('key', models.CharField(max_length=255)),
                ('content', models.JSONField()),
                ('locale', models.CharField(blank=True, max_length=10, null=True)),
                ('metadata', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'db_table': 'resources_resource',
            },
        ),
    ]
