# Generated by Django 5.2.7 on 2025-10-18 08:34

import uuid

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Booking',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('customer_id', models.UUIDField(db_index=True)),
                ('staff_id', models.UUIDField(db_index=True)),
                ('service_id', models.UUIDField(db_index=True)),
                ('booking_ref', models.CharField(max_length=50, unique=True)),
                ('start_time', models.DateTimeField(db_index=True)),
                ('end_time', models.DateTimeField()),
                ('status', models.CharField(db_index=True, max_length=50)),
                ('channel', models.CharField(max_length=50)),
                ('snapshot', models.JSONField(default=dict)),
                ('metadata', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'db_table': 'bookings_booking',
            },
        ),
        migrations.CreateModel(
            name='BookingEvent',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('event_type', models.CharField(max_length=50)),
                ('actor', models.JSONField()),
                ('payload', models.JSONField(default=dict)),
                ('booking', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='events', to='bookings.booking')),
            ],
            options={
                'db_table': 'bookings_event',
            },
        ),
    ]
