# Generated by Django 5.2.7 on 2025-10-18 08:34

import uuid

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('recipient_type', models.CharField(max_length=50)),
                ('recipient_id', models.UUIDField(db_index=True)),
                ('channel', models.CharField(max_length=50)),
                ('template_id', models.UUIDField(blank=True, null=True)),
                ('status', models.CharField(db_index=True, max_length=50)),
                ('payload', models.JSONField(default=dict)),
                ('metadata', models.JSONField(blank=True, default=dict)),
                ('scheduled_for', models.DateTimeField(blank=True, null=True)),
                ('sent_at', models.DateTimeField(blank=True, null=True)),
            ],
            options={
                'db_table': 'communications_notification',
            },
        ),
        migrations.CreateModel(
            name='NotificationTemplate',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(max_length=255)),
                ('channel', models.CharField(max_length=50)),
                ('content', models.JSONField()),
                ('is_active', models.BooleanField(default=True)),
            ],
            options={
                'db_table': 'communications_template',
            },
        ),
    ]
