# Generated by Django 5.0.14 on 2025-10-18 09:57

import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Customer",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4, editable=False, primary_key=True, serialize=False
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("phone", models.CharField(max_length=20)),
                ("full_name", models.CharField(max_length=255)),
                ("email", models.EmailField(blank=True, max_length=254)),
                ("locale", models.CharField(default="ar", max_length=10)),
                ("consent", models.JSONField(default=dict)),
                ("metadata", models.JSONField(blank=True, default=dict)),
            ],
            options={
                "db_table": "customers_customer",
            },
        ),
    ]
