# Generated by Django 5.2.7 on 2025-10-18 08:34

import uuid

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Transaction',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('booking_id', models.UUIDField(blank=True, db_index=True, null=True)),
                ('customer_id', models.UUIDField(db_index=True)),
                ('type', models.CharField(max_length=50)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=10)),
                ('status', models.CharField(db_index=True, max_length=50)),
                ('method', models.CharField(max_length=50)),
                ('provider', models.JSONField(default=dict)),
                ('metadata', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'db_table': 'payments_transaction',
            },
        ),
    ]
